menu with routing, table heading, survey designer renamed in data management

--- a/collect-web/collect-webapp/frontend/src/app/app.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/app.component.html
@@ -1,1 +1,8 @@
-<survey-designer></survey-designer>
+<div class="ui-g">
+    <div class="ui-g-12 ui-md-6 ui-lg-3">
+        <p-menu [model]="items"></p-menu>
+    </div>
+    <div class="ui-g-12 ui-md-6 ui-lg-9">
+        <router-outlet></router-outlet>
+    </div>
+</div>
