--- a/collect-web/collect-webapp/frontend/src/app/data-management/field/field-boolean.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/field/field-boolean.component.html
@@ -1,12 +1,13 @@
 <span [formGroup]="formGroup">
     <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
         <div class="ui-grid-row">
-            <div class="ui-grid-col-6">
-                <strong>{{field.label}}</strong><br />
-                <p-checkbox formControlName="{{fieldId}}" binary="true"></p-checkbox>
+            <div class="ui-grid-col-2">
+                <strong>{{field.label}}</strong>
             </div>
             <div class="ui-grid-col-6">
-
+                <p-checkbox formControlName="{{fieldId}}" binary="true"></p-checkbox>
+            </div>
+            <div class="ui-grid-col-4">
             </div>
         </div>
     </div>
