--- a/collect-web/collect-webapp/frontend/src/app/data-management/field/field-code.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/field/field-code.component.html
@@ -1,14 +1,16 @@
 <span *ngIf="values" [formGroup]="formGroup">
     <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
         <div class="ui-grid-row">
-            <div class="ui-grid-col-6">
+            <div class="ui-grid-col-2">
                 <strong>{{field.label}}</strong>
+            </div>
+            <div class="ui-grid-col-6">
                 <span [ngSwitch]="field.layout">
                     <div *ngSwitchCase="'DROPDOWN'">
                         <p-dropdown [options]="values" [autoWidth]="false" formControlName="{{fieldId}}"></p-dropdown>
                     </div>
-                    <div *ngSwitchCase="'RADIO'">
-                        <div *ngFor="let value of values">
+                    <div *ngSwitchCase="'RADIO'" class="ui-g">
+                        <div *ngFor="let value of values" class="ui-g-12">
                             <p-radioButton name="group1" value="{{value.value}}" label="{{value.label}}" formControlName="{{fieldId}}"></p-radioButton>
                         </div>
                     </div>
@@ -20,7 +22,7 @@
                     </div>
                 </span>
             </div>
-            <div class="ui-grid-col-6">
+            <div class="ui-grid-col-4">
                 <div class="ui-message ui-messages-error ui-corner-all" *ngIf="!formGroup.controls[fieldId].valid && formGroup.controls[fieldId].dirty">
                     <i class="fa fa-close"></i> required!
                 </div>
