--- a/collect-web/collect-webapp/frontend/src/app/data-management/field/field-date.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/field/field-date.component.html
@@ -1,11 +1,13 @@
 <span [formGroup]="formGroup">
     <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
         <div class="ui-grid-row">
-            <div class="ui-grid-col-6">
+            <div class="ui-grid-col-2">
                 <strong>{{field.label}}</strong>
-                <p-calendar formControlName="{{fieldId}}" [showIcon]="true"></p-calendar>
             </div>
             <div class="ui-grid-col-6">
+                <p-calendar formControlName="{{fieldId}}" [showIcon]="true"></p-calendar>
+            </div>
+            <div class="ui-grid-col-4">
                 <div class="ui-message ui-messages-error ui-corner-all" *ngIf="!formGroup.controls[fieldId].valid && formGroup.controls[fieldId].dirty">
                     <i class="fa fa-close"></i> required!
                 </div>
