--- a/collect-web/collect-webapp/frontend/src/app/data-management/tab/tab.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/tab/tab.component.html
@@ -1,4 +1,4 @@
 <div *ngIf="tab">
-    <ofc-children [children]="tab.children" [parentId]="parentId"></ofc-children>
-    <ofc-tabs *ngIf="tab.tabs" [tabs]="tab.tabs" [parentId]="parentId"></ofc-tabs>
+    <ofc-children [children]="tab.children" [parentId]="parentId" [values]="values"></ofc-children>
+    <ofc-tabs *ngIf="tab.tabs" [tabs]="tab.tabs" [parentId]="parentId" [values]="values"></ofc-tabs>
 </div>
