--- a/collect-web/collect-webapp/frontend/src/app/data-management/tabset/tabset.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/tabset/tabset.component.html
@@ -1,1 +1,1 @@
-<ofc-tabs *ngIf="tabSet?.tabs" [tabs]="tabSet.tabs"></ofc-tabs>
+<ofc-tabs *ngIf="tabSet?.tabs" [tabs]="tabSet.tabs" [values]="values"></ofc-tabs>
