--- a/collect-web/collect-webapp/frontend/src/app/data-management/children/children.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/children/children.component.html
@@ -3,7 +3,7 @@
         <div *ngSwitchCase="'FIELD'">
             <div [ngSwitch]="child.attributeType">
                 <div *ngSwitchCase="'CODE'">
-                    <ofc-field-code [field]="child" [parentId]="parentId"></ofc-field-code>
+                    <ofc-field-code [field]="child" [parentId]="parentId" [values]="getChildValues(child.attributeDefinitionId)"></ofc-field-code>
                 </div>
                 <div *ngSwitchCase="'NUMBER'">
                     <ofc-field-number [field]="child" [parentId]="parentId"></ofc-field-number>
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div *ngSwitchCase="'MULTIPLE_FIELDSET'">
-            <ofc-multiple-fieldset [multipleFieldset]="child"></ofc-multiple-fieldset>
+            <ofc-multiple-fieldset [multipleFieldset]="child" [values]="getChildValues(child.entityDefinitionId)"></ofc-multiple-fieldset>
         </div>
         <div *ngSwitchCase="'FIELDSET'">
             <ofc-fieldset [fieldset]="child" [parentId]="parentId"></ofc-fieldset>
