--- a/collect-web/collect-webapp/frontend/src/app/data-management/fieldset/fieldset.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/fieldset/fieldset.component.html
@@ -1,4 +1,4 @@
 <p-fieldset *ngIf="fieldset" legend="{{fieldset.label}}" [toggleable]="true" [collapsed]="true">
-    <ofc-children *ngIf="fieldset.children" [children]="fieldset.children" [parentId]="parentId"></ofc-children>
-    <ofc-tabs *ngIf="fieldset.tabs" [tabs]="fieldset.tabs" [parentId]="parentId"></ofc-tabs>
+    <ofc-children *ngIf="fieldset.children" [children]="fieldset.children" [parentId]="parentId" [values]="values"></ofc-children>
+    <ofc-tabs *ngIf="fieldset.tabs" [tabs]="fieldset.tabs" [parentId]="parentId" [values]="values"></ofc-tabs>
 </p-fieldset>
