Improve CE performance (work in progress)

--- a/collect-server/src/main/resources/org/openforis/collect/designer/templates/collectearth/earthFiles/css/earth.css
+++ b/collect-server/src/main/resources/org/openforis/collect/designer/templates/collectearth/earthFiles/css/earth.css
@@ -182,6 +182,11 @@ table.independentToggle button, .independentToggle button {
 	margin-bottom: 2px;
 }
 
+.wizard > .content > .body .form-group.has-error input {
+	color: #a94442;
+	border-color: #a94442;
+}
+
 form input[type='text'] {
 	width: 200px;
 }
