Make everything work with newer angular-cli version

--- a/collect-web/collect-webapp/frontend/src/app/data-management/data-management.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/data-management.component.html
@@ -1,2 +1,2 @@
 <h2 class="text-muted">{{ 'record-list' | translate }}</h2>
-<app-record-table survey="{{surveyService.preferredSurvey}}"></app-record-table>
+<app-record-table [survey]=surveyService.preferredSurvey></app-record-table>
