--- a/collect-web/collect-webapp/frontend/src/app/data-management/record-table/record-table.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/record-table/record-table.component.html
@@ -1,6 +1,7 @@
-<p-dataTable [value]="records" [(selection)]="selectedRecords" selectionMode="multiple" 
-		[lazy]="true" (onLazyLoad)="loadRecordsLazy($event)" [rows]="20" 
-		[paginator]="true" [rowsPerPageOptions]="[10, 20, 50, 100]" [pageLinks]="10"
+<p-dataTable #dt [value]="records" [(selection)]="selectedRecords" selectionMode="multiple" 
+		[lazy]="true" (onLazyLoad)="loadRecordsLazy($event)" 
+		[loading]="loading" loadingIcon="fa-spinner" 
+		[rows]="20" [paginator]="true" [rowsPerPageOptions]="[10, 20, 50, 100]" [pageLinks]="10"
         [totalRecords]="totalRecords"
         sortField="modifiedDate" sortOrder="1"
         [responsive]="true">
