Prepare record edit

--- a/collect-web/collect-webapp/frontend/src/app/data-management/data-management.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/data-management.component.html
@@ -1,2 +1,8 @@
-<h2 class="text-muted">{{ 'record-list' | translate }}</h2>
+<h2 class="text-muted">{{ 'data-management' | translate }}</h2>
+
+<p-menubar>
+    <button pButton label="New" icon="fa-plus-square" (click)="onNewClick()"></button>
+    <input type="text" pInputText placeholder="Search">
+</p-menubar>
+
 <app-record-table [survey]=surveyService.preferredSurvey></app-record-table>
