Add breadcrumb, prepare ui model objects

--- a/collect-web/collect-webapp/frontend/src/app/data-management/data-management.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/data-management.component.html
@@ -5,4 +5,4 @@
     <input type="text" pInputText placeholder="Search">
 </p-menubar>
 
-<app-record-table [survey]=surveyService.preferredSurvey></app-record-table>
+<ofc-record-table [survey]=surveyService.preferredSurvey></ofc-record-table>
