--- a/collect-web/collect-webapp/frontend/src/app/layout/layout.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/layout/layout.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-sidebar></app-sidebar>
 <section class="main-container">
+	<app-breadcrumb></app-breadcrumb>
     <router-outlet></router-outlet>
 </section>
