--- a/collect-web/collect-webapp/frontend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
     <ul class="list-group">
-        <a routerLink="/home-page" [routerLinkActive]="['router-link-active']" class="list-group-item">
+        <a routerLink="/" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-home"></i>&nbsp;{{ 'home-page' | translate }}
         </a>
         
