Prepare data entry form rendering

--- a/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/tab/tab.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/tab/tab.component.html
@@ -1,2 +1,8 @@
-<div *ngIf="tab">
-</div>
+<p-tabView>
+	<ofc-form-items [itemDefinitions]="tab.items" [totalColumns]="tab.totalColumns" [totalRows]="tab.totalRows"></ofc-form-items>
+	
+	<p-tabPanel *ngFor="let childTab of tab.tabs; let i = index; let first = first;" 
+			[selected]="first" header="{{childTab.label}}" lazy="true">
+        <ofc-tab [tab]="childTab"></ofc-tab>
+    </p-tabPanel>
+</p-tabView>
