--- a/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/form-items/code-field/code-field.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/form-items/code-field/code-field.component.html
@@ -1,4 +1,4 @@
-<span [ngSwitch]="fieldDefinition.layout">
+<span [ngSwitch]="layout">
 	<div *ngSwitchCase="'DROPDOWN'">
 		<p-dropdown [options]="options" [autoWidth]="false"></p-dropdown>
 	</div>
@@ -8,7 +8,7 @@
 		</div>
 	</div>
 	<div *ngSwitchCase="'TEXT'">
-		<input class="form-control" type="text" pInputText />
+		<input class="form-control" type="text" pInputText [(ngModel)]="codeValue"/>
 	</div>
 	<div *ngSwitchDefault>
 		<div style="color: red;">{{field.layout}} NOT IMPLEMENTED!</div>
