--- a/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/form-items/fieldset/fieldset.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/form-items/fieldset/fieldset.component.html
@@ -1,3 +1,3 @@
 <p-fieldset legend="{{fieldsetDefinition.label}}" [toggleable]="true">
-	<ofc-form-items [itemDefinitions]="fieldsetDefinition.items"></ofc-form-items>
+	<ofc-form-items [itemDefinitions]="fieldsetDefinition.items" [parentEntity]="parentEntity"></ofc-form-items>
 </p-fieldset>
