--- a/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/form-items/form-items.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/form-items/form-items.component.html
@@ -1,4 +1,4 @@
 <div *ngFor="let itemDefinition of itemDefinitions; let i = index; let first = first;"
 		class="form-horizontal">
-	<ofc-form-item [itemDefinition]="itemDefinition"></ofc-form-item>
+	<ofc-form-item [itemDefinition]="itemDefinition" [parentEntity]="parentEntity"></ofc-form-item>
 </div>
