--- a/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/record-detail.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/record-detail.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="tabSet">
-	<ofc-tabset [tabSet]="tabSet"></ofc-tabset>
+	<ofc-tabset [tabSet]="tabSet" [record]="record"></ofc-tabset>
 </div>
