--- a/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/tabset/tabset.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/tabset/tabset.component.html
@@ -1,5 +1,7 @@
-<p-tabView *ngIf="tabSet.tabs">
-    <p-tabPanel *ngFor="let tab of tabSet.tabs; let i = index; let first = first;" [selected]="first" header="{{tab.label}}" lazy="true">
-        <ofc-tab [tab]="tab"></ofc-tab>
-    </p-tabPanel>
-</p-tabView>
+<div *ngIf="record">
+	<p-tabView *ngIf="tabSet.tabs">
+	    <p-tabPanel *ngFor="let tab of tabSet.tabs; let i = index; let first = first;" [selected]="first" header="{{tab.label}}" lazy="true">
+	    	<ofc-tab [tab]="tab" [parentEntity]="record.rootEntity"></ofc-tab>
+	    </p-tabPanel>
+	</p-tabView>
+</div>
