--- a/collect-web/collect-webapp/frontend/src/app/shared/components/header/header.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/shared/components/header/header.component.html
@@ -6,6 +6,9 @@
         <a class="navbar-brand" href="#">Open Foris Collect</a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto mt-2 mt-md-0">
+            	<li class="nav-item">
+            		<app-survey-selector ></app-survey-selector>
+            	</li>
                 <li class="nav-item dropdown" ngbDropdown>
                     <!-- <div class="dropdown"> -->
                     <a class="nav-link" href="javascript:void(0)" ngbDropdownToggle>
