Handle record update events in UI (work in progress)

--- a/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/form-items/multiple-fieldset/multiple-fieldset.component.html
+++ b/collect-web/collect-webapp/frontend/src/app/data-management/record-detail/form-items/multiple-fieldset/multiple-fieldset.component.html
@@ -4,6 +4,8 @@
 			<label>Select a {{fieldsetDefinition.label}}:</label>
 			<p-dropdown [options]="entityOptions" [autoWidth]="false"
 				(onChange)="onEntityChange($event)"></p-dropdown>
+			<button pButton label="New" icon="fa-plus-square" (click)="onNewClick()"></button>
+			<button *ngIf="selectedEntity" pButton label="Delete" icon="fa-trash" (click)="onDeleteClick()"></button>
 		</div>
 	</div>
 	
