--- a/collect-web/collect-webapp/frontend/src/app/shared/components/header/header.component.scss
+++ b/collect-web/collect-webapp/frontend/src/app/shared/components/header/header.component.scss
@@ -1,4 +1,4 @@
-$topnav-background-color: #222;
+$topnav-background-color: #fff;
 .topnav {
     border-radius: 0;
     background-color: $topnav-background-color;
@@ -10,11 +10,6 @@ $topnav-background-color: #222;
         cursor: pointer;
     }
     .top-right-nav{
-        .buy-now{
-            a{
-                color:#999;
-            }
-        }
         .dropdown-menu{
             top: 40px;
             right: -5px;
